--- a/templates/admin_edit_posts.html
+++ b/templates/admin_edit_posts.html
@@ -1,19 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
+
+{% block title %}
+    edit
+{% endblock %}
+
+
+{% block content %}
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="static/vendors/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="static/vendors/ti-icons/css/themify-icons.css">
-    <link rel="stylesheet" href="static/vendors/css/vendor.bundle.base.css">
-    <link rel="stylesheet" href="static/vendors/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="static/vendors/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="static/vendors/bootstrap-datepicker/bootstrap-datepicker.min.css">
-    <link rel="stylesheet" href="static/css/newstyle2.css">
-    <link rel="shortcut icon" href="static/images/favicon.png" />
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css" />
   </head>
   <body>
     <div class="container-scroller">
@@ -21,7 +18,7 @@
       <!-- partial:partials/_navbar.html -->
       <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-start">
-          <a class="navbar-brand brand-logo" href="admin.html"><img src="static/images/logo-mini.svg" alt="logo" /></a>
+          <a class="navbar-brand brand-logo" href="admin.html"><img src="{{ url_for('static' , filename='static/images/logo-mini.svg') }}" alt="logo" /></a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-stretch">
           <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -31,7 +28,7 @@
             <li class="nav-item nav-profile dropdown">
               <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
                 <div class="nav-profile-img">
-                  <img src="static/images/faces-clipart/pic-4.png" alt="image">
+                  <img src="{{ url_for('static' , filename='static/images/faces-clipart/pic-4.png') }}" alt="image">
                   <span class="availability-status online"></span>
                 </div>
                 <div class="nav-profile-text">
@@ -61,7 +58,7 @@
             <li class="nav-item nav-profile">
               <a href="#" class="nav-link">
                 <div class="nav-profile-image">
-                  <img src="static/images/faces-clipart/pic-4.png" alt="profile" />
+                  <img src="{{ url_for('static' , filename='static/images/faces-clipart/pic-4.png') }}" alt="profile" />
                   <span class="login-status online"></span>
                   <!--change to offline or busy as needed-->
                 </div>
@@ -103,50 +100,98 @@
                   </ul>
                 </nav>
               </div>
+                <!-- Edit Comment  -->
+                <div class="row">
+                    <div class="container mt-5">
+                        <div class="card">
+                            <div class="card-header">
+                                <h3>Edit Comment</h3>
+                            </div>
+                            <div class="card-body">
+                                <form  method="post" >
 
+                                    <div class="form-group">
+                                        <label for="postTitle">Post Title</label>
+                                        <textarea name="edited_post_title" type="text"  class="form-control" id="postTitle" >{{ title }}</textarea>
+                                    </div>
+                                    <div class="md-4">
+                                        <label for="postContent">Post Content</label>
+                                        <textarea id="editor" name="edited_post_content" class="form-control" id="exampleFormControlTextarea1" rows="7" >{{ content }}</textarea>
+                                    </div>
 
-
-            <!-- Edit Comment  -->
-            <div class="row">
-                <div class="container mt-5">
-                    <div class="card">
-                        <div class="card-header">
-                            <h3>Edit Comment</h3>
-                        </div>
-                        <div class="card-body">
-                            <form  method="post" >
-
-                                <div class="form-group">
-                                    <label for="postTitle">Post Title</label>
-                                    <textarea name="edited_post_title" type="text"  class="form-control" id="postTitle" >{{ title }}</textarea>
-                                </div>
-                                <div class="form-group">
-                                    <label for="postContent">Post Content</label>
-                                    <textarea name="edited_post_content" class="form-control" id="postContent" rows="5" >{{ content }}</textarea>
-                                </div>
-
-                                <button type="submit" class="btn btn-primary">Save changes</button>
-                            </form>
+                                    <button type="submit" class="btn btn-primary">Save changes</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
-      </div>
     </div>
 
 
-    <script src="static/vendors/js/vendor.bundle.base.js"></script>
-    <script src="static/vendors/chart.js/chart.umd.js"></script>
-    <script src="static/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
-    <script src="static/js/off-canvas.js"></script>
-    <script src="static/js/misc.js"></script>
-    <script src="static/js/settings.js"></script>
-    <script src="static/js/todolist.js"></script>
-    <script src="static/js/jquery.cookie.js"></script>
-    <script src="static/js/dashboard.js"></script>
+    <script src="{{ url_for('static' , filename='static/vendors/js/vendor.bundle.base.js') }}"></script>
+    <script src="{{ url_for('static' , filename='static/vendors/chart.js/chart.umd.js') }}"></script>
+    <script src="{{ url_for('static' , filename='static/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js') }}"></script>
+    <script src="{{ url_for('static' , filename='static/js/off-canvas.js') }}"></script>
+    <script src="{{ url_for('static' , filename='static/js/misc.js') }}"></script>
+    <script src="{{ url_for('static' , filename='static/js/settings.js') }}"></script>
+    <script src="{{ url_for('static' , filename='static/js/todolist.js') }}"></script>
+    <script src="{{ url_for('static' , filename='static/js/jquery.cookie.js') }}"></script>
+    <script src="{{ url_for('static' , filename='static/js/dashboard.js') }}"></script>
 
 
-  </body>
-</html>
+    <script>src="{{ url_for('static' , filename='static/js/bootstrap.js') }}"
+        document.getElementById("loader").style.display ="none";
+        function openTest() {
+            document.getElementById("loader").style.display = "block";
+        }
+        document.getElementById('upload-submit').addEventListener('click', openTest);
+    </script>
+
+
+    <script>
+        imgInp.onchange = evt => {
+            const [file] = imgInp.files
+            if (file) {
+              blah.src = URL.createObjectURL(file)
+            }
+          }
+    </script>
+    <script>src="{{ url_for('static' , filename='static/js/bootstrap.js') }}"</script>
+    
+    <script type="importmap">
+        {
+            "imports": {
+                "ckeditor5": "https://cdn.ckeditor.com/ckeditor5/42.0.1/ckeditor5.js",
+                "ckeditor5/": "https://cdn.ckeditor.com/ckeditor5/42.0.1/"
+            }
+        }
+    </script>
+
+
+    <script type="module">
+        import {
+            ClassicEditor,
+            Essentials,
+            Bold,
+            Italic,
+            Font,
+            Paragraph
+        } from 'ckeditor5';
+    
+        ClassicEditor
+            .create( document.querySelector( '#editor' ), {
+                plugins: [ Essentials, Bold, Italic, Font, Paragraph ],
+                toolbar: {
+                    items: [
+                        'undo', 'redo', '|', 'bold', 'italic', '|',
+                        'fontSize', 'fontFamily', 'fontColor', 'fontBackgroundColor'
+                    ]
+                }
+            } )
+            .then( /* ... */ )
+            .catch( /* ... */ );
+    </script>
+
+{% endblock %}
